--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting cats nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
@@ -71,19 +71,19 @@
         <div class="feature-box col-lg-4">
           <i class="fas fa-check-circle features-icon fa-4x"></i>
           <h3 class="feature-title">Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
+          <p>So easy to use, even your cat could do it.</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="fas fa-bullseye features-icon fa-4x"></i>
           <h3 class="feature-title">Elite Clientele</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
+          <p>We have all the cats, the greatest cats.</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="fas fa-heart features-icon fa-4x"></i>
           <h3 class="feature-title">Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
+          <p>Find the love of your cat's life or your money back.</p>
         </div>
 
       </div>
@@ -98,14 +98,14 @@
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
-          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="testimonial-text">I no longer have to sniff other cats for love. I've found the hottest Corgi on TinCat. Meow.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-          <em>Pebbles, New York</em>
+          <em>Pitty, New York</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <h2 class="testimonial-text">My cat used to be so lonely, but with TinCat's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-          <em>Beverly, Illinois</em>
+          <em>Sharil, Washington DC</em>
         </div>
       </div>
       <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
