--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 
   <section class="white-section" id="pricing">
 
-    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <h2 class="section-heading">A Plan for Every Cat's Needs</h2>
+    <p>Simple and affordable price plans for your and your cat.</p>
     <div class="row">
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
@@ -195,7 +195,7 @@
 
     <div class="container-fluid">
 
-      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <h3 class="big-heading">Find the True Love of Your Cat's Life Today.</h3>
       <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
       <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
     </div>
