--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>Kitty</h3>
+            <h3>Basic</h3>
           </div>
           <div class="card-body">
             <h2 class="price-text">Free</h2>
@@ -157,7 +157,7 @@
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>Labrador</h3>
+            <h3>Easy</h3>
           </div>
           <div class="card-body">
             <h2 class="price-text">$49 / mo</h2>
@@ -172,7 +172,7 @@
       <div class="pricing-column col-lg-4 col-md-12">
         <div class="card">
           <div class="card-header">
-            <h3>Mastiff</h3>
+            <h3>Premium</h3>
           </div>
           <div class="card-body">
             <h2 class="price-text">$99 / mo</h2>
