--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#pricing">Prices</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#cta">Download</a>
