--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
-  <title>TinCat</title>
+  <title>Tindog</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,900|Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
@@ -12,23 +11,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </head>
-
 <body>
-
   <section class="colored-section" id="title">
     <div class="container-fluid">
 
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
-
-        <a class="navbar-brand" href="">tincat</a>
-
+        <a class="navbar-brand" href="">tindog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="#footer">Contact</a>
@@ -43,12 +37,10 @@
         </div>
       </nav>
 
-
-
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="big-heading">Meet new and interesting cats nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
@@ -57,53 +49,42 @@
         </div>
       </div>
     </div>
-
   </section>
 
-
   <!-- Features -->
-
   <section class="white-section" id="features">
-
     <div class="container-fluid">
-
       <div class="row">
         <div class="feature-box col-lg-4">
           <i class="fas fa-check-circle features-icon fa-4x"></i>
           <h3 class="feature-title">Easy to use.</h3>
-          <p>So easy to use, even your cat could do it.</p>
+          <p>So easy to use, even your dog could do it.</p>
         </div>
-
         <div class="feature-box col-lg-4">
           <i class="fas fa-bullseye features-icon fa-4x"></i>
           <h3 class="feature-title">Elite Clientele</h3>
-          <p>We have all the cats, the greatest cats.</p>
+          <p>We have all the dogs, the greatest dogs.</p>
         </div>
-
         <div class="feature-box col-lg-4">
           <i class="fas fa-heart features-icon fa-4x"></i>
           <h3 class="feature-title">Guaranteed to work.</h3>
-          <p>Find the love of your cat's life or your money back.</p>
+          <p>Find the love of your dog's life or your money back.</p>
         </div>
-
       </div>
     </div>
   </section>
 
-
   <!-- Testimonials -->
-
   <section class="colored-section" id="testimonials">
-
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
-          <h2 class="testimonial-text">I no longer have to sniff other cats for love. I've found the hottest Corgi on TinCat. Meow.</h2>
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on Tindog. Woof!</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pitty, New York</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="testimonial-text">My cat used to be so lonely, but with TinCat's help, they've found the love of their life. I think.</h2>
+          <h2 class="testimonial-text">My dog used to be so lonely, but with Tindog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Sharil, Washington DC</em>
         </div>
@@ -117,27 +98,20 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-
   </section>
 
-
   <!-- Press -->
-
   <section class="colored-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
-
   </section>
 
-
   <!-- Pricing -->
-
   <section class="white-section" id="pricing">
-
-    <h2 class="section-heading">A Plan for Every Cat's Needs</h2>
-    <p>Simple and affordable price plans for your and your cat.</p>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
+    <p>Simple and affordable price plans for your and your dog.</p>
     <div class="row">
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
@@ -153,7 +127,6 @@
           </div>
         </div>
       </div>
-
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
@@ -168,7 +141,6 @@
           </div>
         </div>
       </div>
-
       <div class="pricing-column col-lg-4 col-md-12">
         <div class="card">
           <div class="card-header">
@@ -184,40 +156,27 @@
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
-
   <!-- Call to Action -->
-
   <section class="colored-section" id="cta">
-
     <div class="container-fluid">
-
-      <h3 class="big-heading">Find the True Love of Your Cat's Life Today.</h3>
+      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
       <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
       <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
     </div>
   </section>
 
-
   <!-- Footer -->
-
   <footer class="white-section" id="footer">
-
     <div class="container-fluid">
-
       <i class="social-icon fab fa-twitter"></i>
       <i class="social-icon fab fa-facebook-f"></i>
       <i class="social-icon fab fa-instagram"></i>
       <i class="social-icon fas fa-envelope"></i>
-
       <p>© Copyright 2019 TinCat</p>
     </div>
   </footer>
-
-
 </body>
-
 </html>
